--- a/index.html
+++ b/index.html
@@ -297,192 +297,94 @@
 </style>
 
     <!-- Skills -->
-    <section class="max-w-5xl mx-auto" data-aos="fade-up" data-aos-delay="150" id="skills">
-      <h2 class="text-3xl font-bold mb-8 border-b-2 border-blue-600 inline-block pb-1">Skills</h2>
-      <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-8">
-        <!-- Skill Item -->
-        <div
-          class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default"
-          title="Python - Expert"
-        >
-          <img
-            alt="Python logo icon"
-            class="w-16 h-16"
-            height="64"
-            src="https://cdn-icons-png.flaticon.com/512/5968/5968350.png"
-            width="64"
-          />
-          <h3 class="font-semibold text-lg">Python</h3>
-          <div class="w-full skill-bar">
-            <div style="width: 90%; background-color:#3776AB;"></div>
-          </div>
-          <span class="text-sm text-gray-600 dark:text-gray-400">Expert</span>
-        </div>
-        <div
-          class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default"
-          title="SQL - Advanced"
-        >
-          <img
-            alt="SQL database icon"
-            class="w-16 h-16"
-            height="64"
-            src="https://storage.googleapis.com/a1aa/image/cc7f70c7-76ba-4f4d-7efa-6b3509515158.jpg"
-            width="64"
-          />
-          <h3 class="font-semibold text-lg">SQL</h3>
-          <div class="w-full skill-bar">
-            <div style="width: 85%; background-color:#E38C00;"></div>
-          </div>
-          <span class="text-sm text-gray-600 dark:text-gray-400">Advanced</span>
-        </div>
-      
-        <div
-          class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default"
-          title="Excel - Advanced"
-        >
-          <img
-            alt="Microsoft Excel icon"
-            class="w-16 h-16"
-            height="64"
-            src="https://storage.googleapis.com/a1aa/image/b9bcc7ed-5735-40f7-cc3c-f4290471ffda.jpg"
-            width="64"
-          />
-          <h3 class="font-semibold text-lg">Excel</h3>
-          <div class="w-full skill-bar">
-            <div style="width: 85%; background-color:#217346;"></div>
-          </div>
-          <span class="text-sm text-gray-600 dark:text-gray-400">Advanced</span>
-        </div>
-        <div
-          class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default"
-          title="Pandas - Intermediate"
-        >
-          <img
-            alt="Pandas Python library icon"
-            class="w-16 h-16"
-            height="64"
-            src="https://storage.googleapis.com/a1aa/image/5601227d-aa44-4092-0936-ec59458e114c.jpg"
-            width="64"
-          />
-          <h3 class="font-semibold text-lg">Pandas</h3>
-          <div class="w-full skill-bar">
-            <div style="width: 75%; background-color:#150458;"></div>
-          </div>
-          <span class="text-sm text-gray-600 dark:text-gray-400">Intermediate</span>
-        </div>
-        <div
-          class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default"
-          title="Scikit-learn - Intermediate"
-        >
-          <img
-            alt="Scikit-learn Python library icon"
-            class="w-16 h-16"
-            height="64"
-            src="https://storage.googleapis.com/a1aa/image/212db6a6-e9de-46b7-2aa6-3c4e87ad31c9.jpg"
-            width="64"
-          />
-          <h3 class="font-semibold text-lg">Scikit-learn</h3>
-          <div class="w-full skill-bar">
-            <div style="width: 70%; background-color:#F7931E;"></div>
-          </div>
-          <span class="text-sm text-gray-600 dark:text-gray-400">Intermediate</span>
-        </div>
-        <div
-          class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default"
-          title="Power BI - Intermediate"
-        >
-          <img
-            alt="Power BI logo icon"
-            class="w-16 h-16"
-            height="64"
-            src="https://storage.googleapis.com/a1aa/image/9f407983-0a75-4748-e815-87f4bfc6efe9.jpg"
-            width="64"
-          />
-          <h3 class="font-semibold text-lg">Power BI</h3>
-          <div class="w-full skill-bar">
-            <div style="width: 65%; background-color:#F2C811;"></div>
-          </div>
-          <span class="text-sm text-gray-600 dark:text-gray-400">Intermediate</span>
-        </div>
-        <!-- APIs & Web Scraping -->
-<div
-  class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default"
-  title="APIs & Web Scraping - Intermediate"
->
-  <img
-    alt="APIs & Web Scraping icon"
-    class="w-16 h-16"
-    height="64"
-    src="https://cdn-icons-png.flaticon.com/512/1006/1006542.png"
-    width="64"
-  />
-  <h3 class="font-semibold text-lg text-center">APIs & Web Scraping</h3>
-  <div class="w-full skill-bar">
-    <div style="width: 70%; background-color:#1E88E5;"></div>
-  </div>
-  <span class="text-sm text-gray-600 dark:text-gray-400">Intermediate</span>
-</div>
+   <!-- Skills -->
+<section class="max-w-5xl mx-auto" data-aos="fade-up" data-aos-delay="150" id="skills">
+  <h2 class="text-3xl font-bold mb-8 border-b-2 border-blue-600 inline-block pb-1">Skills</h2>
+  <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-8">
 
-<!-- Matplotlib -->
-<div
-  class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default"
-  title="Matplotlib - Intermediate"
->
-  <img
-    alt="Matplotlib icon"
-    class="w-16 h-16"
-    height="64"
-    src="https://matplotlib.org/stable/_static/logo2_compressed.svg"
-    width="64"
-    onerror="this.onerror=null;this.src='https://cdn-icons-png.flaticon.com/512/1006/1006559.png';"
-  />
-  <h3 class="font-semibold text-lg">Matplotlib</h3>
-  <div class="w-full skill-bar">
-    <div style="width: 70%; background-color:#11557C;"></div>
-  </div>
-  <span class="text-sm text-gray-600 dark:text-gray-400">Intermediate</span>
-</div>
+    <!-- Python -->
+    <div class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default">
+      <img alt="Python logo icon" class="w-16 h-16" src="https://cdn-icons-png.flaticon.com/512/5968/5968350.png" />
+      <h3 class="font-semibold text-lg">Python</h3>
+      <div class="w-full skill-bar"><div style="width: 90%; background-color:#3776AB;"></div></div>
+      <span class="text-sm text-gray-600 dark:text-gray-400">Expert</span>
+    </div>
 
-<!-- Machine Learning -->
-<div
-  class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default"
-  title="Machine Learning - Intermediate"
->
-  <img
-    alt="Machine Learning icon"
-    class="w-16 h-16"
-    height="64"
-    src="https://cdn-icons-png.flaticon.com/512/10257/10257314.png"
-    width="64"
-  />
-  <h3 class="font-semibold text-lg text-center">Machine Learning</h3>
-  <div class="w-full skill-bar">
-    <div style="width: 70%; background-color:#00897B;"></div>
-  </div>
-  <span class="text-sm text-gray-600 dark:text-gray-400">Intermediate</span>
-</div>
+    <!-- SQL -->
+    <div class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default">
+      <img alt="SQL database icon" class="w-16 h-16" src="https://cdn-icons-png.flaticon.com/512/603/603201.png" />
+      <h3 class="font-semibold text-lg">SQL</h3>
+      <div class="w-full skill-bar"><div style="width: 85%; background-color:#E38C00;"></div></div>
+      <span class="text-sm text-gray-600 dark:text-gray-400">Advanced</span>
+    </div>
 
-<!-- Deep Learning -->
-<div
-  class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default"
-  title="Deep Learning - Beginner"
->
-  <img
-    alt="Deep Learning icon"
-    class="w-16 h-16"
-    height="64"
-    src="https://cdn-icons-png.flaticon.com/512/7861/7861236.png"
-    width="64"
-  />
-  <h3 class="font-semibold text-lg">Deep Learning</h3>
-  <div class="w-full skill-bar">
-    <div style="width: 50%; background-color:#6A1B9A;"></div>
-  </div>
-  <span class="text-sm text-gray-600 dark:text-gray-400">Beginner</span>
-</div>
+    <!-- Excel -->
+    <div class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default">
+      <img alt="Excel logo icon" class="w-16 h-16" src="https://cdn-icons-png.flaticon.com/512/732/732220.png" />
+      <h3 class="font-semibold text-lg">Excel</h3>
+      <div class="w-full skill-bar"><div style="width: 85%; background-color:#1D6F42;"></div></div>
+      <span class="text-sm text-gray-600 dark:text-gray-400">Advanced</span>
+    </div>
 
-      </div>
-    </section>
+    <!-- Pandas -->
+    <div class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default">
+      <img alt="Pandas logo icon" class="w-16 h-16" src="https://cdn-icons-png.flaticon.com/512/5968/5968371.png" />
+      <h3 class="font-semibold text-lg">Pandas</h3>
+      <div class="w-full skill-bar"><div style="width: 75%; background-color:#150458;"></div></div>
+      <span class="text-sm text-gray-600 dark:text-gray-400">Intermediate</span>
+    </div>
+
+    <!-- Scikit-learn -->
+    <div class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default">
+      <img alt="Scikit-learn icon" class="w-16 h-16" src="https://cdn-icons-png.flaticon.com/512/5968/5968705.png" />
+      <h3 class="font-semibold text-lg">Scikit-learn</h3>
+      <div class="w-full skill-bar"><div style="width: 70%; background-color:#F89939;"></div></div>
+      <span class="text-sm text-gray-600 dark:text-gray-400">Intermediate</span>
+    </div>
+
+    <!-- Power BI -->
+    <div class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default">
+      <img alt="Power BI icon" class="w-16 h-16" src="https://cdn-icons-png.flaticon.com/512/5968/5968840.png" />
+      <h3 class="font-semibold text-lg">Power BI</h3>
+      <div class="w-full skill-bar"><div style="width: 70%; background-color:#F2C811;"></div></div>
+      <span class="text-sm text-gray-600 dark:text-gray-400">Intermediate</span>
+    </div>
+
+    <!-- APIs & Web Scraping -->
+    <div class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default">
+      <img alt="API icon" class="w-16 h-16" src="https://cdn-icons-png.flaticon.com/512/3218/3218601.png" />
+      <h3 class="font-semibold text-lg">APIs & Web Scraping</h3>
+      <div class="w-full skill-bar"><div style="width: 70%; background-color:#1B7EE1;"></div></div>
+      <span class="text-sm text-gray-600 dark:text-gray-400">Intermediate</span>
+    </div>
+
+    <!-- Matplotlib -->
+    <div class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default">
+      <img alt="Matplotlib icon" class="w-16 h-16" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/Matplotlib_icon.svg/2048px-Matplotlib_icon.svg.png" />
+      <h3 class="font-semibold text-lg">Matplotlib</h3>
+      <div class="w-full skill-bar"><div style="width: 70%; background-color:#3776AB;"></div></div>
+      <span class="text-sm text-gray-600 dark:text-gray-400">Intermediate</span>
+    </div>
+
+    <!-- Machine Learning -->
+    <div class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default">
+      <img alt="ML icon" class="w-16 h-16" src="https://cdn-icons-png.flaticon.com/512/4380/4380867.png" />
+      <h3 class="font-semibold text-lg">Machine Learning</h3>
+      <div class="w-full skill-bar"><div style="width: 70%; background-color:#00B8A9;"></div></div>
+      <span class="text-sm text-gray-600 dark:text-gray-400">Intermediate</span>
+    </div>
+
+    <!-- Deep Learning -->
+    <div class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default">
+      <img alt="Deep Learning icon" class="w-16 h-16" src="https://cdn-icons-png.flaticon.com/512/2714/2714294.png" />
+      <h3 class="font-semibold text-lg">Deep Learning</h3>
+      <div class="w-full skill-bar"><div style="width: 50%; background-color:#8E44AD;"></div></div>
+      <span class="text-sm text-gray-600 dark:text-gray-400">Beginner</span>
+    </div>
+
+  </div>
+</section>
+
     <!-- Projects -->
     <section class="max-w-6xl mx-auto" data-aos="fade-up" data-aos-delay="200" id="projects">
       <h2 class="text-3xl font-bold mb-8 border-b-2 border-blue-600 inline-block pb-1">Projects</h2>
