--- a/index.html
+++ b/index.html
@@ -270,12 +270,13 @@
 
     <!-- Description -->
     <p class="mt-4 max-w-3xl text-lg leading-relaxed">
-      I am a passionate and results-driven Data Science Intern with hands-on experience transforming raw data into actionable insights that drive strategic decision-making. Proficient in industry-standard tools like Python, SQL, Excel, R Programming, and Power BI, I specialize in uncovering patterns, identifying trends, and visualizing complex datasets with clarity and precision.
-    </p>
+  I’m a passionate Data Science Intern who thrives on solving real-world problems with data. With hands-on experience in Python, SQL, Excel, Power BI, and Natural Language Processing (NLP), I turn complex datasets into meaningful insights that support smarter business decisions.
+</p>
 
-    <p class="mt-4 max-w-3xl text-lg leading-relaxed">
-      As a member of the Google Developer Program, I stay at the forefront of technological advancements and continuously sharpen my skills through real-world projects and community contributions. I’ve successfully led and contributed to projects that leverage machine learning, deep learning, and AI-driven solutions.
-    </p>
+<p class="mt-4 max-w-3xl text-lg leading-relaxed">
+  As part of the Google Developer Program, I stay actively involved in exploring the latest trends in AI and machine learning. From building recommendation systems to automating analytics workflows, I enjoy creating impactful solutions that are both technically sound and user-friendly.
+</p>
+
 
     <!-- Buttons -->
     <div class="mt-6 flex space-x-4">
@@ -386,134 +387,101 @@
 </section>
 
     <!-- Projects -->
-    <section class="max-w-6xl mx-auto" data-aos="fade-up" data-aos-delay="200" id="projects">
-      <h2 class="text-3xl font-bold mb-8 border-b-2 border-blue-600 inline-block pb-1">Projects</h2>
-     <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+   <!-- Projects -->
+<section class="max-w-6xl mx-auto px-4" data-aos="fade-up" data-aos-delay="200" id="projects">
+  <h2 class="text-3xl font-bold mb-8 border-b-2 border-blue-600 inline-block pb-1">Projects</h2>
+  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
 
-  <!-- SnapDocs AI -->
-  <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer" title="SnapDocs AI App">
-    <lottie-player
-      src="https://assets10.lottiefiles.com/packages/lf20_x62chJ.json"
-      background="transparent"
-      speed="1"
-      style="width: 100%; height: 200px;"
-      loop autoplay aria-label="AI document assistant animation"
-    ></lottie-player>
-    <h3 class="text-xl font-semibold mt-4 mb-2">📄 SnapDocs AI App</h3>
-    <p class="text-gray-700 dark:text-gray-300 mb-3 flex-grow">
-      AI utility platform for document conversion, tagging, and PDF management.
-    </p>
-    <p class="text-sm font-semibold text-blue-600 dark:text-blue-400 mb-3">
-      Technologies: Flask, TailwindCSS, Python
-    </p>
-    <div class="flex space-x-4">
-      <a class="text-blue-600 hover:underline flex items-center space-x-2" href="https://github.com/Azad-Bhasme/SnapDocsAI.git" target="_blank"><i class="fab fa-github fa-lg"></i><span>GitHub</span></a>
-      <a class="text-blue-600 hover:underline flex items-center space-x-2" href="https://snapdocs-ai.onrender.com" target="_blank"><i class="fas fa-external-link-alt fa-sm"></i><span>Demo</span></a>
+    <!-- SnapDocs AI App -->
+    <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer" title="SnapDocs AI App">
+      <lottie-player
+        src="https://assets10.lottiefiles.com/packages/lf20_x62chJ.json"
+        background="transparent"
+        speed="1"
+        style="width: 100%; height: 200px"
+        loop
+        autoplay
+        aria-label="Document AI animation"
+      ></lottie-player>
+      <h3 class="text-xl font-semibold text-blue-600 mt-4 mb-2">📄 SnapDocs AI App</h3>
+      <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
+        AI-powered document manager for converting, tagging, and commenting PDFs. Built with Flask and styled using TailwindCSS.
+      </p>
+      <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">Tech: Flask, TailwindCSS, Python</p>
+      <div class="flex gap-4">
+        <a href="https://github.com/Azad-Bhasme/SnapDocsAI.git" target="_blank" class="text-blue-600 hover:underline font-medium">🔗 GitHub</a>
+        <a href="https://snapdocs-ai.onrender.com" target="_blank" class="text-blue-600 hover:underline font-medium">🚀 Demo</a>
+      </div>
     </div>
-  </div>
 
-  <!-- FireWatch-AI -->
-  <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer" title="FireWatch AI">
-    <lottie-player
-      src="https://assets10.lottiefiles.com/packages/lf20_w5YVhD.json"
-      background="transparent"
-      speed="1"
-      style="width: 100%; height: 200px;"
-      loop autoplay aria-label="Fire detection animation"
-    ></lottie-player>
-    <h3 class="text-xl font-semibold mt-4 mb-2">🔥 FireWatch AI</h3>
-    <p class="text-gray-700 dark:text-gray-300 mb-3 flex-grow">
-      Real-time fire detection system powered by YOLOv8 using webcam/video input.
-    </p>
-    <p class="text-sm font-semibold text-blue-600 dark:text-blue-400 mb-3">
-      Technologies: Python, YOLOv8, OpenCV, Streamlit
-    </p>
-    <div class="flex space-x-4">
-      <a class="text-blue-600 hover:underline flex items-center space-x-2" href="https://firewatch-ai-byazad.streamlit.app" target="_blank"><i class="fas fa-external-link-alt fa-sm"></i><span>Live App</span></a>
+    <!-- FireWatch AI -->
+    <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer" title="FireWatch AI">
+      <lottie-player
+        src="https://assets7.lottiefiles.com/packages/lf20_ehlhgsnm.json"
+        background="transparent"
+        speed="1"
+        style="width: 100%; height: 200px"
+        loop
+        autoplay
+        aria-label="Fire detection animation"
+      ></lottie-player>
+      <h3 class="text-xl font-semibold text-blue-600 mt-4 mb-2">🔥 FireWatch AI</h3>
+      <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
+        Real-time fire detection system using YOLOv8 and OpenCV to detect and annotate fire in live video feeds.
+      </p>
+      <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">Tech: Python, YOLOv8, OpenCV, Streamlit</p>
+      <div class="flex gap-4">
+        <a href="https://github.com/Azad-Bhasme" target="_blank" class="text-blue-600 hover:underline font-medium">🔗 GitHub</a>
+        <a href="https://firewatch-ai-byazad.streamlit.app" target="_blank" class="text-blue-600 hover:underline font-medium">🚀 Live App</a>
+      </div>
     </div>
-  </div>
 
-  <!-- CineSuggest -->
-  <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer" title="CineSuggest Movie Recommender">
-    <img
-      alt="Movie recommendation preview"
-      class="rounded-md mb-4 object-cover w-full h-48"
-      src="https://cdn-icons-png.flaticon.com/512/744/744922.png"
-    />
-    <h3 class="text-xl font-semibold mb-2">🎬 CineSuggest</h3>
-    <p class="text-gray-700 dark:text-gray-300 mb-3 flex-grow">
-      A movie recommendation system using metadata and poster visuals from TMDb.
-    </p>
-    <p class="text-sm font-semibold text-blue-600 dark:text-blue-400 mb-3">
-      Technologies: Python, Streamlit, Pandas, TMDb API
-    </p>
-    <div class="flex space-x-4">
-      <a class="text-blue-600 hover:underline flex items-center space-x-2" href="https://cinesuggest-byazad.streamlit.app/" target="_blank"><i class="fas fa-external-link-alt fa-sm"></i><span>Live App</span></a>
+    <!-- CineSuggest -->
+    <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer" title="CineSuggest">
+      <lottie-player
+        src="https://assets4.lottiefiles.com/packages/lf20_tvj76j8u.json"
+        background="transparent"
+        speed="1"
+        style="width: 100%; height: 200px"
+        loop
+        autoplay
+        aria-label="Movie recommendation animation"
+      ></lottie-player>
+      <h3 class="text-xl font-semibold text-blue-600 mt-4 mb-2">🎬 CineSuggest</h3>
+      <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
+        Movie recommendation system that fetches similar titles using content-based filtering and TMDb API visuals.
+      </p>
+      <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">Tech: Python, Streamlit, Pandas, TMDb API, Scikit-learn</p>
+      <div class="flex gap-4">
+        <a href="https://github.com/Azad-Bhasme" target="_blank" class="text-blue-600 hover:underline font-medium">🔗 GitHub</a>
+        <a href="https://cinesuggest-byazad.streamlit.app/" target="_blank" class="text-blue-600 hover:underline font-medium">🎬 Live App</a>
+      </div>
     </div>
-  </div>
 
-  <!-- Relativistic Calculator -->
-  <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer" title="Relativistic Physics Calculator">
-    <img
-      alt="Space physics visualization"
-      class="rounded-md mb-4 object-cover w-full h-48"
-      src="https://cdn-icons-png.flaticon.com/512/5402/5402110.png"
-    />
-    <h3 class="text-xl font-semibold mb-2">🌌 Relativistic Mass & Time Dilation</h3>
-    <p class="text-gray-700 dark:text-gray-300 mb-3 flex-grow">
-      Calculates relativistic mass and time perception using Einstein's special relativity.
-    </p>
-    <p class="text-sm font-semibold text-blue-600 dark:text-blue-400 mb-3">
-      Technologies: Python, Physics, NumPy
-    </p>
-    <div class="flex space-x-4">
-      <a class="text-blue-600 hover:underline flex items-center space-x-2" href="https://github.com/Azad-Bhasme/Relativistic-Mass-and-Time-Dilation-Calculator" target="_blank"><i class="fab fa-github fa-lg"></i><span>GitHub</span></a>
+    <!-- Relativistic Mass Calculator -->
+    <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer" title="Relativistic Calculator">
+      <lottie-player
+        src="https://assets10.lottiefiles.com/packages/lf20_jbrw3hcz.json"
+        background="transparent"
+        speed="1"
+        style="width: 100%; height: 200px"
+        loop
+        autoplay
+        aria-label="Physics relativity animation"
+      ></lottie-player>
+      <h3 class="text-xl font-semibold text-blue-600 mt-4 mb-2">🌌 Relativistic Mass & Time Dilation Calculator</h3>
+      <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
+        Physics calculator using Einstein’s theory to compute time dilation and relativistic mass for high-speed travel.
+      </p>
+      <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">Tech: Python, Special Relativity, Physics</p>
+      <div class="flex gap-4">
+        <a href="https://github.com/Azad-Bhasme/Relativistic-Mass-and-Time-Dilation-Calculator" target="_blank" class="text-blue-600 hover:underline font-medium">🔗 GitHub</a>
+      </div>
     </div>
+
   </div>
+</section>
 
-  <!-- Cancer Prediction App -->
-  <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer" title="Cancer Prediction App">
-    <img
-      alt="ML prediction results"
-      class="rounded-md mb-4 object-cover w-full h-48"
-      src="https://cdn-icons-png.flaticon.com/512/2966/2966484.png"
-    />
-    <h3 class="text-xl font-semibold mb-2">🚀 Cancer Prediction Web App</h3>
-    <p class="text-gray-700 dark:text-gray-300 mb-3 flex-grow">
-      Classifies tumors as benign or malignant using Random Forest and Streamlit.
-    </p>
-    <p class="text-sm font-semibold text-blue-600 dark:text-blue-400 mb-3">
-      Technologies: Python, Streamlit, Machine Learning
-    </p>
-    <div class="flex space-x-4">
-      <a class="text-blue-600 hover:underline flex items-center space-x-2" href="https://github.com/Azad-Bhasme/Cancer-predicition-.git" target="_blank"><i class="fab fa-github fa-lg"></i><span>GitHub</span></a>
-      <a class="text-blue-600 hover:underline flex items-center space-x-2" href="https://endapp-amnzb4ctw4mp66mkjzctkr.streamlit.app/" target="_blank"><i class="fas fa-external-link-alt fa-sm"></i><span>Demo</span></a>
-    </div>
-  </div>
-
-  <!-- Project 2 (Tableau Dashboard) -->
-  <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer" title="Sales Dashboard">
-    <img
-      alt="Data dashboard screenshot"
-      class="rounded-md mb-4 object-cover w-full h-48"
-      src="https://cdn-icons-png.flaticon.com/512/5658/5658077.png"
-    />
-    <h3 class="text-xl font-semibold mb-2">📊 Sales Dashboard</h3>
-    <p class="text-gray-700 dark:text-gray-300 mb-3 flex-grow">
-      A dashboard built with Tableau to visualize and analyze sales trends.
-    </p>
-    <p class="text-sm font-semibold text-blue-600 dark:text-blue-400 mb-3">
-      Technologies: Python, Tableau
-    </p>
-    <div class="flex space-x-4">
-      <a class="text-blue-600 hover:underline flex items-center space-x-2" href="https://github.com/Azad-Bhasme" target="_blank"><i class="fab fa-github fa-lg"></i><span>GitHub</span></a>
-    </div>
-  </div>
-
-</div>
-
-   </div>
-    </section>
     <!-- GitHub & Kaggle Projects -->
     <section class="max-w-4xl mx-auto" data-aos="fade-up" data-aos-delay="250" id="integrations">
       <h2 class="text-3xl font-bold mb-8 border-b-2 border-blue-600 inline-block pb-1 flex items-center gap-3">
