--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     >
       <h1 class="text-4xl sm:text-5xl font-extrabold leading-tight flex flex-col items-center gap-2">
         Turning Data into Decisions with
-        <span class="text-blue-600 dark:text-blue-400">Python, SQL &amp; R Programming</span>
+        <span class="text-blue-600 dark:text-blue-400">Python, SQL &amp; Machine Learning</span>
       </h1>
       <p class="text-xl font-medium text-gray-700 dark:text-gray-300 mt-2">
         Data Science Intern | Google Developer Program Member
@@ -343,14 +343,6 @@
       <span class="text-sm text-gray-600 dark:text-gray-400">Intermediate</span>
     </div>
 
-    <!-- Power BI -->
-    <div class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default">
-      <img alt="Power BI icon" class="w-16 h-16" src="https://cdn-icons-png.flaticon.com/512/5968/5968840.png" />
-      <h3 class="font-semibold text-lg">Power BI</h3>
-      <div class="w-full skill-bar"><div style="width: 70%; background-color:#F2C811;"></div></div>
-      <span class="text-sm text-gray-600 dark:text-gray-400">Intermediate</span>
-    </div>
-
     <!-- APIs & Web Scraping -->
     <div class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default">
       <img alt="API icon" class="w-16 h-16" src="https://cdn-icons-png.flaticon.com/512/3218/3218601.png" />
@@ -367,33 +359,56 @@
       <span class="text-sm text-gray-600 dark:text-gray-400">Intermediate</span>
     </div>
 
-    <!-- Machine Learning -->
-    <div class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default">
-      <img alt="ML icon" class="w-16 h-16" src="https://cdn-icons-png.flaticon.com/512/4380/4380867.png" />
-      <h3 class="font-semibold text-lg">Machine Learning</h3>
-      <div class="w-full skill-bar"><div style="width: 70%; background-color:#00B8A9;"></div></div>
-      <span class="text-sm text-gray-600 dark:text-gray-400">Intermediate</span>
-    </div>
 
-    <!-- Deep Learning -->
-    <div class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default">
-      <img alt="Deep Learning icon" class="w-16 h-16" src="https://cdn-icons-png.flaticon.com/512/2714/2714294.png" />
-      <h3 class="font-semibold text-lg">Deep Learning</h3>
-      <div class="w-full skill-bar"><div style="width: 50%; background-color:#8E44AD;"></div></div>
-      <span class="text-sm text-gray-600 dark:text-gray-400">Beginner</span>
-    </div>
+    <!-- Skill: Machine Learning -->
+<div class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default" title="Machine Learning - Intermediate">
+  <img alt="Machine Learning icon" class="w-16 h-16" height="64"
+    src="https://cdn-icons-png.flaticon.com/512/2850/2850155.png" width="64" />
+  <h3 class="font-semibold text-lg">Machine Learning</h3>
+  <div class="w-full skill-bar">
+    <div style="width: 70%; background-color:#6A5495;"></div>
+  </div>
+  <span class="text-sm text-gray-600 dark:text-gray-400">Intermediate</span>
+</div>
 
+<!-- Skill: Deep Learning -->
+<div class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default" title="Deep Learning - Intermediate">
+  <img alt="Deep Learning icon" class="w-16 h-16" height="64"
+    src="https://cdn-icons-png.flaticon.com/512/3584/3584071.png" width="64" />
+  <h3 class="font-semibold text-lg">Deep Learning</h3>
+  <div class="w-full skill-bar">
+    <div style="width: 65%; background-color:#FF6F61;"></div>
+  </div>
+  <span class="text-sm text-gray-600 dark:text-gray-400">Intermediate</span>
+</div>
+
+<!-- Skill: Power BI (updated icon) -->
+<div class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default" title="Power BI - Intermediate">
+  <img alt="Power BI icon" class="w-16 h-16" height="64"
+    src="https://cdn-icons-png.flaticon.com/512/888/888853.png" width="64" />
+  <h3 class="font-semibold text-lg">Power BI</h3>
+  <div class="w-full skill-bar">
+    <div style="width: 75%; background-color:#F2C811;"></div>
+  </div>
+  <span class="text-sm text-gray-600 dark:text-gray-400">Intermediate</span>
+</div>
+
+
+   
+   
   </div>
 </section>
 
     <!-- Projects -->
    <!-- Projects -->
+
+<!-- Projects -->
 <section class="max-w-6xl mx-auto px-4" data-aos="fade-up" data-aos-delay="200" id="projects">
   <h2 class="text-3xl font-bold mb-8 border-b-2 border-blue-600 inline-block pb-1">Projects</h2>
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
 
     <!-- SnapDocs AI App -->
-    <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer" title="SnapDocs AI App">
+    <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
       <lottie-player
         src="https://assets10.lottiefiles.com/packages/lf20_x62chJ.json"
         background="transparent"
@@ -409,21 +424,21 @@
       </p>
       <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">Tech: Flask, TailwindCSS, Python</p>
       <div class="flex gap-4">
-        <a href="https://github.com/Azad-Bhasme/SnapDocsAI.git" target="_blank" class="text-blue-600 hover:underline font-medium">🔗 GitHub</a>
+        <a href="https://github.com/Azad-Bhasme/SnapDocsAI.git" target="_blank" class="text-blue-600 hover:underline font-medium"><i class="fab fa-github fa-lg"></i> GitHub</a>
         <a href="https://snapdocs-ai.onrender.com" target="_blank" class="text-blue-600 hover:underline font-medium">🚀 Demo</a>
       </div>
     </div>
 
     <!-- FireWatch AI -->
-    <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer" title="FireWatch AI">
+    <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
       <lottie-player
-        src="https://assets7.lottiefiles.com/packages/lf20_ehlhgsnm.json"
+        src="https://assets9.lottiefiles.com/packages/lf20_j1adxtyb.json"
         background="transparent"
         speed="1"
         style="width: 100%; height: 200px"
         loop
         autoplay
-        aria-label="Fire detection animation"
+        aria-label="Fire animation"
       ></lottie-player>
       <h3 class="text-xl font-semibold text-blue-600 mt-4 mb-2">🔥 FireWatch AI</h3>
       <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
@@ -431,15 +446,15 @@
       </p>
       <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">Tech: Python, YOLOv8, OpenCV, Streamlit</p>
       <div class="flex gap-4">
-        <a href="https://github.com/Azad-Bhasme" target="_blank" class="text-blue-600 hover:underline font-medium">🔗 GitHub</a>
-        <a href="https://firewatch-ai-byazad.streamlit.app" target="_blank" class="text-blue-600 hover:underline font-medium">🚀 Live App</a>
+        <a href="https://github.com/Azad-Bhasme" target="_blank" class="text-blue-600 hover:underline font-medium"><i class="fab fa-github fa-lg"></i> GitHub</a>
+        <a href="https://firewatch-ai-byazad.streamlit.app" target="_blank" class="text-blue-600 hover:underline font-medium">🚀 Demo</a>
       </div>
     </div>
 
     <!-- CineSuggest -->
-    <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer" title="CineSuggest">
+    <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
       <lottie-player
-        src="https://assets4.lottiefiles.com/packages/lf20_tvj76j8u.json"
+        src="https://assets2.lottiefiles.com/private_files/lf30_t26law.json"
         background="transparent"
         speed="1"
         style="width: 100%; height: 200px"
@@ -453,34 +468,78 @@
       </p>
       <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">Tech: Python, Streamlit, Pandas, TMDb API, Scikit-learn</p>
       <div class="flex gap-4">
-        <a href="https://github.com/Azad-Bhasme" target="_blank" class="text-blue-600 hover:underline font-medium">🔗 GitHub</a>
-        <a href="https://cinesuggest-byazad.streamlit.app/" target="_blank" class="text-blue-600 hover:underline font-medium">🎬 Live App</a>
+        <a href="https://github.com/Azad-Bhasme" target="_blank" class="text-blue-600 hover:underline font-medium"><i class="fab fa-github fa-lg"></i> GitHub</a>
+        <a href="https://cinesuggest-byazad.streamlit.app/" target="_blank" class="text-blue-600 hover:underline font-medium">🚀 Demo</a>
       </div>
     </div>
 
-    <!-- Relativistic Mass Calculator -->
-    <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer" title="Relativistic Calculator">
+    <!-- Relativistic Calculator -->
+    <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
       <lottie-player
-        src="https://assets10.lottiefiles.com/packages/lf20_jbrw3hcz.json"
+        src="https://assets2.lottiefiles.com/packages/lf20_tcvtyhkc.json"
         background="transparent"
         speed="1"
         style="width: 100%; height: 200px"
         loop
         autoplay
-        aria-label="Physics relativity animation"
+        aria-label="Physics calculator"
       ></lottie-player>
       <h3 class="text-xl font-semibold text-blue-600 mt-4 mb-2">🌌 Relativistic Mass & Time Dilation Calculator</h3>
       <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
-        Physics calculator using Einstein’s theory to compute time dilation and relativistic mass for high-speed travel.
+        Calculates relativistic mass and time dilation using Einstein’s theory. Great for learning physics and space science.
       </p>
       <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">Tech: Python, Special Relativity, Physics</p>
       <div class="flex gap-4">
-        <a href="https://github.com/Azad-Bhasme/Relativistic-Mass-and-Time-Dilation-Calculator" target="_blank" class="text-blue-600 hover:underline font-medium">🔗 GitHub</a>
+        <a href="https://github.com/Azad-Bhasme/Relativistic-Mass-and-Time-Dilation-Calculator" target="_blank" class="text-blue-600 hover:underline font-medium"><i class="fab fa-github fa-lg"></i> GitHub</a>
+      </div>
+    </div>
+
+    <!-- Cancer Prediction Web App -->
+    <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
+      <lottie-player
+        src="https://assets5.lottiefiles.com/packages/lf20_9p4wz3en.json"
+        background="transparent"
+        speed="1"
+        style="width: 100%; height: 200px"
+        loop
+        autoplay
+        aria-label="Medical diagnosis"
+      ></lottie-player>
+      <h3 class="text-xl font-semibold text-blue-600 mt-4 mb-2">🚀 Cancer Prediction Web App</h3>
+      <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
+        A Streamlit app that uses a Random Forest Classifier to predict tumor type. Clean UI for medical decision support.
+      </p>
+      <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">Tech: Python, Streamlit, Machine Learning</p>
+      <div class="flex gap-4">
+        <a href="https://github.com/Azad-Bhasme/Cancer-predicition-.git" target="_blank" class="text-blue-600 hover:underline font-medium"><i class="fab fa-github fa-lg"></i> GitHub</a>
+        <a href="https://endapp-amnzb4ctw4mp66mkjzctkr.streamlit.app/" target="_blank" class="text-blue-600 hover:underline font-medium">🚀 Demo</a>
+      </div>
+    </div>
+
+    <!-- Dashboard Project -->
+    <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
+      <lottie-player
+        src="https://assets4.lottiefiles.com/packages/lf20_yr6zz3wv.json"
+        background="transparent"
+        speed="1"
+        style="width: 100%; height: 200px"
+        loop
+        autoplay
+        aria-label="Dashboard visual"
+      ></lottie-player>
+      <h3 class="text-xl font-semibold text-blue-600 mt-4 mb-2">📊 Sales Dashboard</h3>
+      <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
+        A dashboard built using Python and Tableau to visualize and explore sales trends interactively.
+      </p>
+      <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">Tech: Python, Tableau, Data Visualization</p>
+      <div class="flex gap-4">
+        <a href="https://github.com/Azad-Bhasme" target="_blank" class="text-blue-600 hover:underline font-medium"><i class="fab fa-github fa-lg"></i> GitHub</a>
       </div>
     </div>
 
   </div>
 </section>
+
 
     <!-- GitHub & Kaggle Projects -->
     <section class="max-w-4xl mx-auto" data-aos="fade-up" data-aos-delay="250" id="integrations">
