--- a/index.html
+++ b/index.html
@@ -430,16 +430,20 @@
     </div>
 
     <!-- FireWatch AI -->
-    <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
-      <lottie-player
-        src="https://assets9.lottiefiles.com/packages/lf20_j1adxtyb.json"
-        background="transparent"
-        speed="1"
-        style="width: 100%; height: 200px"
-        loop
-        autoplay
-        aria-label="Fire animation"
-      ></lottie-player>
+        <div class="card ...">
+  <lottie-player
+    src="https://assets8.lottiefiles.com/packages/lf20_j1adxtyb.json"
+    background="transparent"
+    speed="1"
+    style="width: 100%; height: 200px;"
+    loop
+    autoplay
+    aria-label="Fire detection animation"
+  ></lottie-player>
+  <h3>🔥 FireWatch AI</h3>
+  ...
+</div>
+
       <h3 class="text-xl font-semibold text-blue-600 mt-4 mb-2">🔥 FireWatch AI</h3>
       <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
         Real-time fire detection system using YOLOv8 and OpenCV to detect and annotate fire in live video feeds.
@@ -453,8 +457,8 @@
 
     <!-- CineSuggest -->
     <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
-      <lottie-player
-        src="https://assets2.lottiefiles.com/private_files/lf30_t26law.json"
+       <lottie-player
+        src="https://assets9.lottiefiles.com/packages/lf20_j1adxtyb.json"
         background="transparent"
         speed="1"
         style="width: 100%; height: 200px"
@@ -475,8 +479,8 @@
 
     <!-- Relativistic Calculator -->
     <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
-      <lottie-player
-        src="https://assets2.lottiefiles.com/packages/lf20_tcvtyhkc.json"
+     <lottie-player
+        src="https://assets2.lottiefiles.com/private_files/lf30_t26law.json"
         background="transparent"
         speed="1"
         style="width: 100%; height: 200px"
@@ -484,6 +488,7 @@
         autoplay
         aria-label="Physics calculator"
       ></lottie-player>
+      
       <h3 class="text-xl font-semibold text-blue-600 mt-4 mb-2">🌌 Relativistic Mass & Time Dilation Calculator</h3>
       <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
         Calculates relativistic mass and time dilation using Einstein’s theory. Great for learning physics and space science.
@@ -495,26 +500,32 @@
     </div>
 
     <!-- Cancer Prediction Web App -->
-    <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
-      <lottie-player
-        src="https://assets5.lottiefiles.com/packages/lf20_9p4wz3en.json"
-        background="transparent"
-        speed="1"
-        style="width: 100%; height: 200px"
-        loop
-        autoplay
-        aria-label="Medical diagnosis"
-      ></lottie-player>
-      <h3 class="text-xl font-semibold text-blue-600 mt-4 mb-2">🚀 Cancer Prediction Web App</h3>
-      <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
-        A Streamlit app that uses a Random Forest Classifier to predict tumor type. Clean UI for medical decision support.
-      </p>
-      <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">Tech: Python, Streamlit, Machine Learning</p>
-      <div class="flex gap-4">
-        <a href="https://github.com/Azad-Bhasme/Cancer-predicition-.git" target="_blank" class="text-blue-600 hover:underline font-medium"><i class="fab fa-github fa-lg"></i> GitHub</a>
-        <a href="https://endapp-amnzb4ctw4mp66mkjzctkr.streamlit.app/" target="_blank" class="text-blue-600 hover:underline font-medium">🚀 Demo</a>
-      </div>
-    </div>
+    <!-- Cancer Prediction Web App -->
+<div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
+  <lottie-player
+    src="https://assets5.lottiefiles.com/packages/lf20_9p4wz3en.json"
+    background="transparent"
+    speed="1"
+    style="width: 100%; height: 200px;"
+    loop
+    autoplay
+    aria-label="Medical diagnosis animation"
+  ></lottie-player>
+  <h3 class="text-xl font-semibold text-blue-600 mt-4 mb-2">🚀 Cancer Prediction Web App</h3>
+  <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
+    A Streamlit tool using a Random Forest classifier to predict tumor type, with an intuitive UI for medical decision support.
+  </p>
+  <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">Tech: Python, Streamlit, Machine Learning</p>
+  <div class="flex gap-4">
+    <a href="https://github.com/Azad-Bhasme/Cancer-predicition-.git" target="_blank" class="text-blue-600 hover:underline font-medium">
+      <i class="fab fa-github fa-lg"></i> GitHub
+    </a>
+    <a href="https://endapp-amnzb4ctw4mp66mkjzctkr.streamlit.app/" target="_blank" class="text-blue-600 hover:underline font-medium">
+      🚀 Demo
+    </a>
+  </div>
+</div>
+
 
     <!-- Dashboard Project -->
     <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
